fixed wrap issue in the contact and social part

--- a/style.css
+++ b/style.css
@@ -103,12 +103,14 @@ h2 {
 .icon {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 50px;
   margin-bottom: 40px;
 }
 .cicon {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 170px;
 }
 .contact {
